k8s/test/cmap_service.deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "cmap-service"
  namespace: "abuse-api-test"
  labels:
    app: "cmap-service"
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: "cmap-service"
  template:
    metadata:
      labels:
        app: "cmap-service"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9200"
    spec:
      imagePullSecrets:
        -
          name: "dcu-artifactory-creds"
      containers:
        -
          name: "cmap-service"
          imagePullPolicy: "Always"
          image: "docker-dcu-local.artifactory.secureserver.net/cmap_service:test"
          livenessProbe:
            exec:
              command:
              - /app/kubetipper.sh
            initialDelaySeconds: 120
            periodSeconds: 120
            failureThreshold: 1
          env:
            - name: METRICS_PORT
              value: '9200'
            - name: LOGLEVEL
              value: INFO
            - name: LIVENESS_TTL
              value: "7200"
            - name: LIVENESS_FACTOR
              value: "0.1"
            - name: BUILD_DATE
              value: 'THIS_STRING_IS_REPLACED_DURING_BUILD'
            - name: sysenv
              value: test
            - name: HTTP_ONLY
              value: 'true'
            - name: CMAP_SERVICE_CERT
              value: /servicecerts/tls.crt
            - name: CMAP_SERVICE_KEY
              value: /servicecerts/tls.key
            - name: CMAP_API_CERT
              value: /apicerts/tls.crt
            - name: CMAP_API_KEY
              value: /apicerts/tls.key
            - name: TLS_MIN_VERSION
              value: '1.0'
            - name: DB_PASS
              valueFrom:
                secretKeyRef:
                  name: db-phishstory-v2
                  key: password
            - name: ALEXA_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  name: auth-alexa
                  key: password
            - name: ALEXA_ACCESS_ID
              valueFrom:
                secretKeyRef:
                  name: auth-alexa
                  key: username
            - name: VPS4_USER
              valueFrom:
                secretKeyRef:
                  name: auth-vps4-api
                  key: vps4user
            - name: VPS4_PASS
              valueFrom:
                secretKeyRef:
                  name: auth-vps4-api
                  key: vps4pass
            - name: ANGELO_USER
              valueFrom:
                secretKeyRef:
                  name: auth-plesk
                  key: pleskuser
            - name: ANGELO_PASS
              valueFrom:
                secretKeyRef:
                  name: auth-plesk
                  key: pleskpass
            - name: DIABLO_USER
              valueFrom:
                secretKeyRef:
                  name: auth-diablo
                  key: diablouser
            - name: DIABLO_PASS
              valueFrom:
                secretKeyRef:
                  name: auth-diablo
                  key: diablopass
            - name: SMDB_USER
              valueFrom:
                secretKeyRef:
                  name: auth-smdb
                  key: username
            - name: SMDB_PASS
              valueFrom:
                secretKeyRef:
                  name: auth-smdb
                  key: password
            - name: VALUATION_KEY
              valueFrom:
                secretKeyRef:
                  name: valuation-api
                  key: password
            - name: ELASTIC_APM_SERVER_URL
              valueFrom:
                secretKeyRef:
                  name: apm-access
                  key: url
            - name: ELASTIC_APM_SECRET_TOKEN
              valueFrom:
                secretKeyRef:
                  name: apm-access
                  key: secret
          volumeMounts:
            - name: tls-files-api
              mountPath: /apicerts
              readOnly: true
            - name: tls-files-service
              mountPath: /servicecerts
              readOnly: true
      volumes:
        - name: tls-files-api
          secret:
            secretName: tls-shopper-api
        - name: tls-files-service
          secret:
            secretName: tls-cmap-service
