k8s/test/cmap_service.ingress.yaml
---
apiVersion: "networking.k8s.io/v1beta1"
kind: "Ingress"
metadata:
  name: "cmap-service"
  namespace: "abuse-api-test"
spec:
  tls:
    - hosts:
      - "cmapservice.cset.int.test-gdcorp.tools"
      secretName: cset-wildcard
  rules:
  - host: "cmapservice.cset.int.test-gdcorp.tools"
    http:
      paths:
      - path: /
        backend:
          serviceName: "cmap-service"
          servicePort: 5000
